# Eromang

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: settings.local.json
AI/: CMakeLists.txt  PROJECT_STRUCTURE.md  package.xml
AI/Data/: plc_program_toggle.st
AI/models/: __init__.py  qwen.py
AI/role/role_A/: history.JSON
AI/role/role_A/prompts/: 01_base_role.txt  08_anti_history_pollution.txt
AI/scripts/: README_USAGE.md  main.py
AI/scripts/Agent/: AIManager.py  _Dialogue.py  _Search.py  __init__.py
AI/scripts/models/: Kiimi.py  deepseek.py  doubao.py
AI/scripts/role/: config.json  user.JSON
AI/scripts/role/role_A/: assistant.json
AI/scripts/role/role_A/prompts/: 03_json_format.txt  04_code_structure.txt  06_examples_correct.txt  09_deep_thinking.txt  README.md
AI/scripts/role/role_B/: assistant.json
AI/scripts/role/role_B/prompts/: 01_base_role.txt  03_todo_generation.txt  05_json_format.txt  build_prompt.py
AI/scripts/serve/: OPEN_AI.py  __init__.py
AI/scripts/tools/: AllEventsHandler.py  DataInquire.py  ExcelProcessor.py  FileEditor.py  JSONProcessor.py  __init__.py  example.xlsx  log.py
AI/scripts/window/: README.md  app.py  启动配置管理.bat
AI/test/: test_connection.py
AI/tools/: HistoryManager.py
client/: requirements.txt
client/app/: app.py  main.py
client/common/globals/: app_state.py  event_bus.py
client/common/utils/: file_utils.py  image_utils.py
client/core/api_client/: client.py  endpoints.py  websocket.py
client/core/database/: connection.py  models.py
client/core/exception/: error_handler.py  exceptions.py
client/core/sources/manga/: manager.py
client/core/thread/: thread_manager.py  thread_pool.py  worker.py
client/modules/ai_assistant/: PROJECT_STRUCTURE.md  README.md  ai_assistant.py
client/modules/ai_assistant/.claude/: settings.local.json
client/modules/ai_assistant/Agent/: ConversationHandler.py
client/modules/ai_assistant/Data/models/tokenizers/models--deepseek-ai--DeepSeek-R1/refs/: main
client/modules/ai_assistant/Data/models/tokenizers/models--deepseek-ai--DeepSeek-R1/snapshots/56d4cbbb4d29f4355bab4b9a39ccb717a14ad5ad/: tokenizer_config.json
client/modules/ai_assistant/models/: xinhuo.py
client/modules/ai_assistant/module/AICore/: AIManager.py  __init__.py
client/modules/ai_assistant/module/AICore/Model/: deepseek.py  doubao.py
client/modules/ai_assistant/module/AICore/Tool/: ConfigValidator.py  HistoryManager.py  OPEN_AI.py
client/modules/ai_assistant/module/AICore/role/: config.json  secret_key.json
client/modules/ai_assistant/module/AICore/role/role_A/: assistant.json  history.JSON
client/modules/ai_assistant/module/AICore/role/role_A/prompts/: 01_base_role.txt  02_output_decision.txt  03_json_format.txt  04_code_structure.txt  05_pid_requirements.txt  06_examples_correct.txt  07_examples_wrong.txt  08_anti_history_pollution.txt  09_deep_thinking.txt  build_prompt.py
client/modules/ai_assistant/module/AICore/role/role_B/: assistant.json  history.json
client/modules/ai_assistant/module/AICore/role/role_B/prompts/: 01_base_role.txt  02_search_decision.txt  02_task_planning.txt  03_result_processing.txt  04_feedback_handling.txt  build_prompt.py
client/modules/ai_assistant/module/Agent/: Agent.py  ConversationHandler.py  SimpleConversationHandler.py  __init__.py
client/modules/ai_assistant/module/MCP/client/: MCPClient.py  server.py
client/modules/ai_assistant/module/MCP/server/: MCPServer.py  McpConstants.py  ToolAdapter.py  tools_config.py
client/modules/ai_assistant/module/MCP/server/config/: tools_config.json
client/modules/ai_assistant/module/MCP/server/tools/: DataInquire.py  DatabaseEditor.py  FileEditor.py  TaskManager.py  WorkspaceManager.py  __init__.py  mathematics.py
client/modules/ai_assistant/role/role_A/prompts/: 02_output_decision.txt  07_examples_wrong.txt
client/modules/ai_assistant/role/role_B/prompts/: 04_search_execution.txt
client/modules/ai_assistant/test/: debug_tool_type.py  test_dialogue_vs_tool.py  test_function_calling.py  test_mcp_openai.py  test_new_mcp_tools.py  test_openai_to_mcp.py  test_role_parameter.py  use_external_mcp.py
client/modules/ai_assistant/tools/: AllEventsHandler.py  DatabaseEditor.py  HistoryManager.py  MYJson.py  __init__.py
client/modules/ai_assistant/window/templates/: index.html
docs/: api.md  architecture.md  development.md  fastmcp_hidden_features.md  fastmcp_setup_handlers.md
scripts/: create_structure.py
server/: requirements.txt
server/api/: schemas.py  server.py
server/api/middleware/: cors.py  logging.py
server/api/routes/: document.py  sync.py  user.py
server/app/: config.py  main.py
server/database/models/: manga.py  video.py
server/database/repository/: manga_repo.py  user_repo.py  video_repo.py
server/services/: document_service.py  manga_service.py  sync_service.py  user_service.py  video_service.py
server/sources/crawler/: engine.py
server/sources/manga/: parser.py
server/storage/: local.py  oss.py
server/utils/: auth.py  cache.py  logger.py
server/websocket/: events.py  handlers.py
shared/constants/: app_constants.py  format_constants.py
shared/models/: base.py
shared/utils/: common_utils.py
src/: main.py
src/constants/: settings.py
src/database/: connection.py
src/database/models/: __init__.py  base.py  document.py  library.py  manga.py  video.py
src/managers/: config_manager.py
src/ui/: main_window.py
tests/: client.py  server.py
